fix + gap

--- a/css/styles.css
+++ b/css/styles.css
@@ -39,19 +39,30 @@ h1,h2,h3,h4,h5,h6,p,ul {
 
 img {
     display: block;
+    max-width: 100%;
 }
 .container {
     width: 1200px;
     margin-left: auto;
     margin-right: auto;
-    padding: 94px 15px;
-    
+    padding: 0 15px;   
+}
+.section {
+    padding-top: 94px;
+    padding-bottom: 94px;
 }
 /* header */
+header {
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.02em;
+    border-bottom: 1px solid rgba(236, 236, 236, 1);
+
+}
 .header-box {
     display: flex;
-    padding: 0 15px;
-    border-bottom: 1px solid rgba(236, 236, 236, 1);
+    padding: 0 15px; 
 }
 .logo {
     font-family: 'Raleway', 'snas-serif';
@@ -64,33 +75,23 @@ img {
     color: var(--active-bg-color);
 }
 
-header {
-    font-weight: 500;
-    font-size: 14px;
-    line-height: 1.14;
-    letter-spacing: 0.02em;
-    
-}
 .navigation {
-    
     display: flex;
     margin-left: 93px;
+    gap: 50px;
 }
 .navigation .item {
     display: block;
-    padding: 32px 0;
+}
 
-}
-.navigation .item:not(:last-child) {
-    margin-right: 50px ;
-    
-}
 nav {
     display: flex;
     align-items: center;
 }
 .nav-title {
-    color: var(--title-color-text)
+    color: var(--title-color-text);
+    display: inline-block;
+    padding: 32px 0;
 }
 .activ {
     text-decoration: none;
@@ -109,10 +110,9 @@ button {
     display: flex;
     margin-left: auto;
     align-items: center;
+    gap: 50px;
 }
-.contact .item:not(:last-child) {
-    margin-right: 50px;
-}
+
 .mail {
     color: var(--primary-color-text);
 }
@@ -139,10 +139,6 @@ button {
 
 .hero-button {
     margin: 0 auto;
-    box-shadow: 0px 4px 4px rgb(0 0 0 / 15%);
-    border-radius: 4px;
-    padding: 10px 32px;
-    border-width: 0;
     
     font-weight: 700;
     font-size: 16px;
@@ -150,6 +146,11 @@ button {
     letter-spacing: 0.06em;
     color: var(--white-color);
     background-color: var(--active-bg-color);
+
+    box-shadow: 0px 4px 4px rgb(0 0 0 / 15%);
+    border-radius: 4px;
+    padding: 10px 32px;
+    border-width: 0;
 }
 .hero-button:hover {
     background-color: var(--active-butt-bg);
@@ -157,7 +158,7 @@ button {
 /* особливості */
 .feature {
     display: flex;
-    
+    gap: 30px;
 }
 .feat-cont {
     padding-bottom: 0;
@@ -165,9 +166,7 @@ button {
 .feature .item {
     width: 270px;
 }
-.feature .item:not(:last-child) {
-    margin-right: 30px;
-}
+
 .feature-title {
     margin-top: 0;
     margin-bottom: 10px;
@@ -184,6 +183,7 @@ button {
     line-height: 1.71;
 }
 /* section */
+
 .section-title {
     margin-top: 0;
     margin-bottom: 50px;
@@ -197,12 +197,11 @@ button {
 /* work */
 .work {
     display: flex;
+    gap: 30px;
 }
 
 
-.work .item:not(:last-child) {
-    margin-right: 30px;
-}
+
 /* team */
 .sec-team {
     background-color: var(--team-butt-bg);
@@ -213,7 +212,7 @@ button {
     font-size: 16px;
     line-height: 1.19;
     text-align: center;
-    
+    gap: 30px;
 }
 
 .team-title {
@@ -233,9 +232,7 @@ button {
     border-radius: 0px 0px 4px 4px;
     background-color: var(--white-color);
 }
-.team-list:not(:last-child) {
-    margin-right: 30px;
-}
+
 .team-text {
     padding: 30px 0;
 }
@@ -252,7 +249,9 @@ address {
     margin-top: 20px;
     font-size: 14px;
     line-height: 1.71;
+    
 }
+
 address .item:not(:last-child) {
     margin-bottom: 9px;
 }
@@ -274,11 +273,12 @@ footer .mail {
 
 /* portfolio */
 .filters {
+    margin-bottom: 50px;
     display: flex;
     justify-content: center;
+    gap: 8px;
 }
 .filters button {
-    
     font-weight: 500;
     font-size: 16px;
     line-height: 1.63;
@@ -288,9 +288,7 @@ footer .mail {
     border-width: 0;
     padding: 6px 22px;
 }
-.filters li:not(:last-child) {
-    margin-right: 8px;
-}
+
 .filters button:hover,
 .filters button:focus {
     background-color: var(--active-bg-color);
@@ -298,26 +296,16 @@ footer .mail {
 }
 
 .portfolio {
-    padding-top: 50px;
     display: flex;
     flex-wrap: wrap;
-    
+    gap: 30px;
 }
-.portfolio .item {
-    margin-right: 30px;
-    margin-bottom: 30px;
 
-    
-}
-.portfolio .item:nth-child(3n) {
-    margin-right: 0;
-}
-.portfolio .item:nth-last-child(-n+3) {
-    margin-bottom: 0;
-}
+
 .portfolio .text {
     padding: 20px 24px;
-    border: 1px solid rgba(238, 238, 238, 1)
+    border: 1px solid rgba(238, 238, 238, 1);
+    border-top: 0;
 }
 .portfolio-title {
     margin-bottom: 4px;
